--- a/Accordion/index.html
+++ b/Accordion/index.html
@@ -70,8 +70,7 @@
         </div>
       </div>
     </div>
-
-    <script src="./jquery.min.js"></script>
+    <script src="../jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
